style fix: give (again) the header logo a "z-index" of 5, otherwise the flash box will appear over it

--- a/tagger/public/themes/default/css/style.css
+++ b/tagger/public/themes/default/css/style.css
@@ -226,6 +226,7 @@ table td.icon {
     height: 160px;
     width: 160px;
     background-image: url(../images/logo.png);
+    z-index: 5;
 }
 
 #header .menu_top {
